# LetMeCreate

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  LetMeCreateConfig.cmake.in  LetMeCreateConfigVersion.cmake.in  README  Readme.md
examples/: CMakeLists.txt  common.c  common.h
examples/7seg/: main.c
examples/accel/: main.c
examples/adc/: main.c
examples/alphanum/: main.c
examples/bar_graph/: main.c
examples/bargraph/: main.c
examples/buzz/: main.c
examples/color/: main.c
examples/color2/: main.c
examples/eve/: main.c  main2.c  main3.c  main4.c
examples/joystick/: main.c
examples/led/: main.c
examples/led_matrix/: main.c
examples/lora/: main.c
examples/motion/: main.c
examples/oled/: main.c
examples/proximity/: main.c
examples/relay2/: main.c
examples/rpisensehat/: main.c
examples/rtc/: main.c
examples/switch/: main.c
examples/thermo3/: main.c
examples/uni_hall/: main.c
include/: click.h  core.h  letmecreate.h
include/click/: accel.h  air_quality.h  common.h  joystick.h  led_matrix.h  motion.h  proximity.h  relay2.h  thermo3.h
include/core/: adc.h  common.h  gpio.h  gpio_monitor.h  i2c.h  led.h  pwm.h  spi.h  switch.h  uart.h
include/letmecreate/: click.h  core.h  letmecreate.h  rpisensehat.h
include/letmecreate/bosch/: bme280.h
include/letmecreate/click/: 7seg.h  accel.h  adc.h  air_quality.h  alcohol.h  alphanum.h  bar_graph.h  bargraph.h  co.h  color.h  color2.h  common.h  dc_motor.h  eve.h  fan.h  ft800_defs.h  gyro.h  ir_distance.h  ir_eclipse.h  joystick.h  led_matrix.h  light.h  lin_hall.h  lora.h  motion.h  oled.h  opto.h  proximity.h  relay.h  relay2.h  relay4.h  rtc.h  thermo3.h  uni_hall.h  weather.h
include/letmecreate/core/: adc.h  common.h  gpio.h  gpio_monitor.h  i2c.h  led.h  pwm.h  spi.h  switch.h  uart.h
include/letmecreate/rpisensehat/: attiny88.h  board.h  hts221.h  lps25h.h  lsm9ds1.h
miscellaneous/: Config.in.devel  Config.in.stable  Makefile  Makefile.devel  Makefile.stable  testing_plan
src/bosch/: bme280.c
src/bosh/: bme280.c
src/click/: 7seg.c  accel.c  adc.c  air_quality.c  alcohol.c  alphanum.c  bar_graph.c  bargraph.c  co.c  color.c  color2.c  common.c  dc_motor.c  eve.c  fan.c  gyro.c  ir_distance.c  ir_eclipse.c  joystick.c  led_matrix.c  light.c  lin_hall.c  lora.c  motion.c  oled.c  opto.c  proximity.c  relay.c  relay2.c  relay4.c  rtc.c  thermo3.c  uni_hall.c  weather.c
src/core/: adc.c  common.c  gpio.c  gpio_monitor.c  i2c.c  led.c  pwm.c  spi.c  switch.c  uart.c
src/rpisensehat/: attiny88.c  board.c  hts221.c  lps25h.c  lsm9ds1.c
tests/: CMakeLists.txt  common.c  common.h  test_adc.c  test_eve_click.c  test_gpio.c  test_gpio_monitor.c  test_i2c.c  test_led.c  test_pwm.c  test_spi.c  test_switch.c  test_uart.c
