set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples/bin)

add_executable(letmecreate_proximity_example proximity/main.c)
target_link_libraries(letmecreate_proximity_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_proximity_example RUNTIME DESTINATION bin)

add_executable(letmecreate_thermo3_example thermo3/main.c)
target_link_libraries(letmecreate_thermo3_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_thermo3_example RUNTIME DESTINATION bin)

add_executable(letmecreate_relay2_example relay2/main.c)
target_link_libraries(letmecreate_relay2_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_relay2_example RUNTIME DESTINATION bin)

add_executable(letmecreate_joystick_example joystick/main.c)
target_link_libraries(letmecreate_joystick_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_joystick_example RUNTIME DESTINATION bin)

add_executable(letmecreate_accel_example accel/main.c)
target_link_libraries(letmecreate_accel_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_accel_example RUNTIME DESTINATION bin)

add_executable(letmecreate_led_matrix_example led_matrix/main.c)
target_link_libraries(letmecreate_led_matrix_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_led_matrix_example RUNTIME DESTINATION bin)

add_executable(letmecreate_color_example color/main.c)
target_link_libraries(letmecreate_color_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_color_example RUNTIME DESTINATION bin)

add_executable(letmecreate_led_example led/main.c)
target_link_libraries(letmecreate_led_example letmecreate_core)
install(TARGETS letmecreate_led_example RUNTIME DESTINATION bin)

add_executable(letmecreate_buzz_example buzz/main.c)
target_link_libraries(letmecreate_buzz_example letmecreate_core)
install(TARGETS letmecreate_buzz_example RUNTIME DESTINATION bin)

add_executable(letmecreate_motion_example motion/main.c)
target_link_libraries(letmecreate_motion_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_motion_example RUNTIME DESTINATION bin)
