set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples/bin)

add_library(examples_common OBJECT common.c)

add_executable(letmecreate_proximity_example proximity/main.c)
target_link_libraries(letmecreate_proximity_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_proximity_example RUNTIME DESTINATION bin)

add_executable(letmecreate_thermo3_example thermo3/main.c)
target_link_libraries(letmecreate_thermo3_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_thermo3_example RUNTIME DESTINATION bin)

add_executable(letmecreate_relay2_example relay2/main.c)
target_link_libraries(letmecreate_relay2_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_relay2_example RUNTIME DESTINATION bin)

add_executable(letmecreate_joystick_example joystick/main.c)
target_link_libraries(letmecreate_joystick_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_joystick_example RUNTIME DESTINATION bin)

add_executable(letmecreate_accel_example accel/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_accel_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_accel_example RUNTIME DESTINATION bin)

add_executable(letmecreate_led_matrix_example led_matrix/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_led_matrix_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_led_matrix_example RUNTIME DESTINATION bin)

add_executable(letmecreate_color_example color/main.c)
target_link_libraries(letmecreate_color_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_color_example RUNTIME DESTINATION bin)

add_executable(letmecreate_led_example led/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_led_example letmecreate_core)
install(TARGETS letmecreate_led_example RUNTIME DESTINATION bin)

add_executable(letmecreate_buzz_example buzz/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_buzz_example letmecreate_core)
install(TARGETS letmecreate_buzz_example RUNTIME DESTINATION bin)

add_executable(letmecreate_motion_example motion/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_motion_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_motion_example RUNTIME DESTINATION bin)

add_executable(letmecreate_color2_example color2/main.c)
target_link_libraries(letmecreate_color2_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_color2_example RUNTIME DESTINATION bin)

add_executable(letmecreate_bargraph_example bargraph/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_bargraph_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_bargraph_example RUNTIME DESTINATION bin)

add_executable(letmecreate_7seg_example 7seg/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_7seg_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_7seg_example RUNTIME DESTINATION bin)

add_executable(letmecreate_adc_example adc/main.c)
target_link_libraries(letmecreate_adc_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_adc_example RUNTIME DESTINATION bin)

add_executable(letmecreate_eve_1_example eve/main.c)
target_link_libraries(letmecreate_eve_1_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_eve_1_example RUNTIME DESTINATION bin)

add_executable(letmecreate_eve_2_example eve/main2.c)
target_link_libraries(letmecreate_eve_2_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_eve_2_example RUNTIME DESTINATION bin)

add_executable(letmecreate_eve_3_example eve/main3.c)
target_link_libraries(letmecreate_eve_3_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_eve_3_example RUNTIME DESTINATION bin)

add_executable(letmecreate_eve_4_example eve/main4.c)
target_link_libraries(letmecreate_eve_4_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_eve_4_example RUNTIME DESTINATION bin)

add_executable(letmecreate_rtc_example rtc/main.c)
target_link_libraries(letmecreate_rtc_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_rtc_example RUNTIME DESTINATION bin)

add_executable(letmecreate_alphanum_example alphanum/main.c $<TARGET_OBJECTS:examples_common>)
target_link_libraries(letmecreate_alphanum_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_alphanum_example RUNTIME DESTINATION bin)

add_executable(letmecreate_oled_example oled/main.c)
target_link_libraries(letmecreate_oled_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_oled_example RUNTIME DESTINATION bin)

add_executable(letmecreate_rpisensehat_example rpisensehat/main.c)
target_link_libraries(letmecreate_rpisensehat_example letmecreate_rpisensehat letmecreate_core)
install(TARGETS letmecreate_rpisensehat_example RUNTIME DESTINATION bin)

add_executable(letmecreate_lora_example lora/main.c)
target_link_libraries(letmecreate_lora_example letmecreate_click letmecreate_core)
install(TARGETS letmecreate_lora_example RUNTIME DESTINATION bin)
